# avito-test-task

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  coverage.txt  docker-compose.yml  load_testing.txt  locustfile.py  pyproject.toml  requirements.txt  ruff.toml
app/: db.py  init_data.py  main.py
app/migrations/: env.py
app/migrations/versions/: 1fc57012ebb8_refactor_models.py  5065f2153eb2_init_commit.py  555a64706a39_.py  c82ea01098d5_create_new_tabels.py
app/models/: item.py  transaction.py  user.py
app/routes/: auth.py  transaction.py
app/schemas/: transaction.py  user.py
app/utils/: hasher.py  info_utils.py  redis_utils.py  redis_utlis.py  security_utils.py  token_utils.py  transaction_utils.py
migrations/: env.py
migrations/versions/: 66659bc51752_refactor_models.py  976ba1168a14_init_migration.py  e2847933735c_remove_useless_table.py
tests/: conftest.py
tests/routes/: test_auth.py  test_transaction.py
