[tool.poetry]
name = "AvitoService"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.8"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
aiosqlite = "^0.21.0"
greenlet = "^3.1.1"
loguru = "^0.7.3"
alembic = "^1.14.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}
ruff = "^0.9.6"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
locust = "^2.32.9"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
